--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2025-03-28 Version: v1.0.1
+- Update API GetSubPartnerList: add response parameters Body.SubPartnerList.
+- Update API GetSubPartnerList: delete response parameters Body.Data.
+
+
 2025-03-05 Version: v1.0.0
 - Generated golang 2025-02-27 for Agency.
 
